[tool.poetry]
name = "atorch"
version = "0.1.0"
description = "An abstract base class for training, evaluation, and inference of pytorch models."
authors = ["Emanuele Guidotti <emanuele.guidotti@usi.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eguidotti/atorch"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.6.0"

[tool.poetry.scripts]
atorch = "atorch.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
