[tool.poetry]
name = "torchabc"
version = "0.1.0"
description = "A minimal abstract class for training, evaluation, and inference of pytorch models."
authors = ["Emanuele Guidotti <emanuele.guidotti@usi.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eguidotti/torchabc"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.6.0"

[tool.poetry.scripts]
torchabc = "torchabc.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
